--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.1",
     "mysql2": "^3.15.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-refresh": "^0.18.0",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "regex": "^6.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
