--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "mysql2": "^3.15.2",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-modal": "^3.16.3",
     "react-refresh": "^0.18.0",
     "react-router-dom": "^7.9.4",
     "regex": "^6.0.1"
