--- a/package.json
+++ b/package.json
@@ -20,16 +20,18 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
+    "express-slow-down": "^3.0.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
-    "mysql2": "^3.15.2",
+    "mysql2": "^3.15.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.3",
     "react-refresh": "^0.18.0",
     "react-router-dom": "^7.9.4",
-    "regex": "^6.0.1"
+    "regex": "^6.0.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
